--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "gulp-babel": "^6.1.2",
     "gulp-eslint": "^2.0.0",
     "gulp-mocha": "^2.2.0",
-    "mocha": "^2.4.5"
+    "mocha": "^2.4.5",
+    "round-to": "^1.1.0"
   }
 }
