--- a/.eslintrc
+++ b/.eslintrc
@@ -3,5 +3,10 @@
   "extends": "airbnb",
   "rules": {
     "strict": 0
-  }
+  },
+  "env": {
+    "browser": true,
+    "node": true,
+    "mocha": true
+  },
 }
