--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "devDependencies": {
     "babel": "^6.5.2",
+    "babel-cli": "^6.7.5",
     "babel-core": "^6.7.4",
     "babel-eslint": "^6.0.2",
     "babel-polyfill": "^6.7.4",
