--- a/package.json
+++ b/package.json
@@ -26,7 +26,11 @@
     "gulp": "^3.9.1",
     "gulp-babel": "^6.1.2",
     "gulp-eslint": "^2.0.0",
+    "gulp-istanbul": "^0.10.4",
+    "gulp-istanbul-enforcer": "^1.0.3",
     "gulp-mocha": "^2.2.0",
+    "isparta": "^4.0.0",
+    "istanbul": "^0.4.3",
     "mocha": "^2.4.5",
     "round-to": "^1.1.0"
   }
