--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "babel-polyfill": "^6.7.4",
     "babel-preset-es2015": "^6.6.0",
     "chai": "^3.5.0",
+    "del": "^2.2.0",
     "eslint": "^2.7.0",
     "eslint-config-airbnb": "^6.2.0",
     "eslint-plugin-react": "^4.3.0",
