--- a/package.json
+++ b/package.json
@@ -20,13 +20,18 @@
     "babel-polyfill": "^6.7.4",
     "babel-preset-es2015": "^6.6.0",
     "chai": "^3.5.0",
+    "del": "^2.2.0",
     "eslint": "^2.7.0",
     "eslint-config-airbnb": "^6.2.0",
     "eslint-plugin-react": "^4.3.0",
     "gulp": "^3.9.1",
     "gulp-babel": "^6.1.2",
     "gulp-eslint": "^2.0.0",
+    "gulp-istanbul": "^0.10.4",
+    "gulp-istanbul-enforcer": "^1.0.3",
     "gulp-mocha": "^2.2.0",
+    "isparta": "^4.0.0",
+    "istanbul": "^0.4.3",
     "mocha": "^2.4.5",
     "round-to": "^1.1.0"
   }
