--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "gulp-istanbul": "^0.10.4",
     "gulp-istanbul-enforcer": "^1.0.3",
     "gulp-mocha": "^2.2.0",
+    "gulp-plumber": "^1.1.0",
     "isparta": "^4.0.0",
     "istanbul": "^0.4.3",
     "mocha": "^2.4.5",
