--- a/.travis.yml
+++ b/.travis.yml
@@ -8,3 +8,5 @@ script: gulp
 addons:
   code_climate:
     repo_token: 235840f0b04b4d409e19e4ba854e235e7b2a3fdfb862dad444676e72884a7cfb
+after_success:
+  - bash <(curl -s https://codecov.io/bash)
