--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "eslint-plugin-react": "^4.3.0",
     "gulp": "^3.9.1",
     "gulp-babel": "^6.1.2",
+    "gulp-codacy": "^1.0.0",
     "gulp-eslint": "^2.0.0",
     "gulp-istanbul": "^0.10.4",
     "gulp-istanbul-enforcer": "^1.0.3",
