--- a/package.json
+++ b/package.json
@@ -3,33 +3,9 @@
   "version": "1.0.0",
   "description": "Fuzzy-theo lib example page",
   "main": "webpack.config.js",
-  "devDependencies": {
-    "autoprefixer": "^6.3.6",
-    "babel": "^6.5.2",
-    "babel-cli": "^6.7.5",
-    "babel-core": "^6.7.6",
-    "babel-eslint": "^6.0.2",
-    "babel-loader": "^6.2.4",
-    "babel-polyfill": "^6.7.4",
-    "babel-preset-es2015": "^6.6.0",
-    "chai": "^3.5.0",
-    "deep-freeze": "^0.0.1",
-    "eslint": "^2.7.0",
-    "eslint-config-airbnb": "^6.2.0",
-    "eslint-loader": "^1.3.0",
-    "eslint-plugin-react": "^4.3.0",
-    "gulp": "^3.9.1",
-    "gulp-babel": "^6.1.2",
-    "gulp-eslint": "^2.0.0",
-    "gulp-mocha": "^2.2.0",
-    "js-schema": "^1.0.1",
-    "mocha": "^2.4.5",
-    "postcss-loader": "^0.8.2",
-    "precss": "^1.4.0",
-    "webpack": "^1.13.0"
-  },
   "scripts": {
-    "test": "mocha"
+    "build": "webpack --progress --colors",
+    "dev": "webpack-dev-server --hot --watch"
   },
   "repository": {
     "type": "git",
@@ -42,6 +18,29 @@
   },
   "homepage": "https://github.com/leoaretakis/fuzzy-theo#readme",
   "dependencies": {
-    "underscore": "^1.8.3"
+    "isolated-core": "^0.1.1",
+    "react": "^0.14.7",
+    "react-dom": "^0.14.7",
+    "react-redux": "^4.4.0",
+    "redux": "^3.3.1"
+  },
+  "devDependencies": {
+    "eslint": "^2.7.0",
+    "eslint-config-airbnb": "^6.2.0",
+    "eslint-loader": "^1.3.0",
+    "eslint-plugin-react": "^4.3.0",
+    "gulp": "^3.9.1",
+    "gulp-babel": "^6.1.2",
+    "gulp-eslint": "^2.0.0",
+    "babel": "^6.5.2",
+    "babel-cli": "^6.7.5",
+    "babel-core": "^6.7.6",
+    "babel-loader": "^6.2.4",
+    "babel-eslint": "^6.0.2",
+    "babel-polyfill": "^6.7.4",
+    "babel-preset-es2015": "^6.6.0",
+    "babel-preset-react": "^6.5.0",
+    "webpack": "^1.13.0",
+    "webpack-dev-server": "^1.14.1"
   }
 }
